# kattalai

./: .gitattributes  .gitignore  API-Readme.md  COMMERCIAL_LICENSE.md  CONTRIBUTORS.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  LICENSE  PYREADME.md  README.md  cla-signatures.json  pyproject.toml
.cargo/: config.toml
.github/workflows/: cla.yaml  release.yml
apps/: requirements.txt
apps/core_apps/app_finder_app/: app_finder_app.py  app_finder_app.toml
apps/core_apps/calculator_app/: calculator_app.py  calculator_app.toml
apps/core_apps/codex_app/: codex_app.py  codex_app.toml
apps/core_apps/codex_app/knowledge_base/: index.md
apps/core_apps/file_handler_app/: file_handler_app.py  file_handler_app.toml
apps/core_apps/grep_app/: grep_app.py  grep_app.toml
apps/core_apps/notes_app/: notes_app.py  notes_app.toml
apps/core_apps/protocol_admin_app/: protocol_admin_app.py  protocol_admin_app.toml
apps/core_apps/shell_app/: shell_app.py  shell_app.toml
apps/other_apps/pdf_reader_app/: pdf_reader_app.py  pdf_reader_app.toml
apps/other_apps/rest_api_app/: rest_api.app.py  rest_api_app.toml
apps/other_apps/rss_app/: rss_app.py  rss_app.toml
apps/other_apps/stock_tracker_app/: stock_tracker_app.py  stock_tracker_app.toml
apps/other_apps/tabular_reader_app/: tabular_reader_app.py  tabular_reader_app.toml
apps/other_apps/transcription_app/: transcription_app.py  transcription_app.toml
apps/other_apps/vision_app/: vision_app.py  vision_app.toml
apps/other_apps/voice_app/: voice_app.py  voice_app.toml
apps/other_apps/webpage_reader_app/: webpage_reader_app.py  webpage_reader_app.toml
apps/other_apps/webpage_reader_app/_se_spill/: se_spill_epNone_invNone_1777745423288_eec9a92c4b074e7cb37922a3a37e0e0e.json
apps/other_apps/wikipedia_app/: wikipedia_app.py  wikipedia_app.toml
apps/se_app_utils/: soulengine.py
configs/: agents_config.toml  cogitare_config.toml  inference_config.toml  model_config.toml  protocol_config.toml  protocol_schedules.txt  server_config.toml  subagents_config.toml
data/: sample
demo/: server_demo.py
knowledge_base/: agent_diary.md  agent_diary_guide.md  codex_app_guide.md  feature_backlogs.md  index.md  subworkers.md  windows_path_handling.md
knowledge_base/news/: indianexpress.md
prompts/: AGENT_COGITARE_PROMPT.md  AGENT_COGITARE_PROMPT.toml  AGENT_META_COGNITION_PROMPT.md  AGENT_OPERATING_RULES.md  AGENT_PREFLIGHT_PROMPT.md  AGENT_PROTOCOL_PROMPT.md  AGENT_RAC_PROMPT.md  AGENT_REASONING_PROMPT.md  AGENT_RESPONSE_REPAIR_PROMPT.md  AGENT_TOT_PROMPT.md  CONTEXT_TAGGING_PROMPT.md  PREFLIGHT_USAGE_INSTRUCTIONS.md  SUBAGENT_META_COGNITION_PROMPT.md  SUBAGENT_OPERATING_RULES.md  SUBAGENT_RAC_PROMPT.md  SUBAGENT_REASONING_PROMPT.md  SUBAGENT_TOT_PROMPT.md  cogitare_config.toml
protocols/: demo_protocol.toml  morning_news_summary.toml
pysrc/soulengine/: __init__.py  kattalai.py
pysrc/soulengine/apps/core_apps/calculator_app/: calc_vars.json  calculator_app.py  calculator_app.toml
pysrc/soulengine/apps/core_apps/clock_app/: clock_app.py  clock_app.toml
pysrc/soulengine/apps/se_app_utils/: soulengine.py
pysrc/soulengine/configs/: agents_config.toml  inference_config.toml  protocol_schedules.txt
pysrc/soulengine/knowledge_base/: agent_diary.md  computer_use_guide.md  index.md  kattalai_roadmap.md  user_behavior.md
pysrc/soulengine/prompts/: AGENT_OPERATING_RULES.md  AGENT_PROTOCOL_PROMPT.md  AGENT_RAC_PROMPT.md  AGENT_REASONING_PROMPT.md  AGENT_TOT_PROMPT.md  CONTEXT_TAGGING_PROMPT.md
pysrc/soulengine/protocols/: credit_card_summary.toml  demo_protocol.toml  handle_typo_correction.toml  morning_news_summary.toml  morning_protocol.toml  validate_windows_path.toml
src/: agent.rs  app.rs  appstore.rs  config.rs  database.rs  embeddings.rs  inference.rs  lib.rs  main.rs  memory.rs  model.rs  protocol.rs  server.rs  source.rs  terminal.rs  tool.rs
(+10 files in other folders)
