[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "kattalai"
version = "0.2.0"
description = "Sirapana Ai Engine"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.20.0",
]

[project.scripts]
kattalai = "soulengine.kattalai:main"
kattalai-folder = "soulengine.kattalai:open_folder"

[tool.maturin]
python-source = "pysrc"
module-name = "soulengine"
include = [
    { path = "apps/**/*", format = "wheel" },
    { path = "configs/**/*", format = "wheel" },
    { path = "model_assets/**/*", format = "wheel" },
    { path = "prompts/**/*", format = "wheel" },
]