[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "kattalai"
version = "0.4.0"
description = "Sirapana Ai Engine"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.20.0",
]
readme = "PYREADME.md"
authors = [{ name = "RajaganapathyM", email = "rganapathy6@gmail.com" }]

[project.scripts]
kattalai = "soulengine.kattalai:main"
kattalai-folder = "soulengine.kattalai:open_folder"
kattalai-setup = "soulengine.kattalai:setup"

[tool.maturin]
python-source = "pysrc"
module-name = "soulengine"
include = [
    { path = "apps/**/*", format = "wheel" },
    { path = "configs/**/*", format = "wheel" },
    { path = "model_assets/**/*", format = "wheel" },
    { path = "prompts/**/*", format = "wheel" },
]
