[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "kattalai"
version = "0.4.5"
description = "Sirapana Ai Engine"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.20.0",
]
readme = "PYREADME.md"
authors = [{ name = "RajaganapathyM", email = "rganapathy6@gmail.com" }]
license = { text = "Dual licensed under AGPL-3.0-or-later OR Commercial License" }

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.scripts]
kattalai = "soulengine.kattalai:main"
kattalai-folder = "soulengine.kattalai:open_folder"
kattalai-setup = "soulengine.kattalai:setup"
kattalai-upgrade = "soulengine.kattalai:upgrade"

[tool.maturin]
python-source = "pysrc"
module-name = "soulengine"
include = [
    { path = "apps/**/*", format = "wheel" },
    { path = "configs/**/*", format = "wheel" },
    { path = "model_assets/**/*", format = "wheel" },
    { path = "prompts/**/*", format = "wheel" },
]
